src/01_enformer/00_clusterCRG/work/f1/e6ca0672be725a02d8a091a3b93d38/.command.log
  File "02_pred_eval.py", line 72
    if(eval == "eval"){
                      ^
SyntaxError: invalid syntax
cp: ‘.command.out’ and ‘/nfs/users/cn/lsantus/projects/FED/src/00_clusterCRG/work/f1/e6ca0672be725a02d8a091a3b93d38/.command.out’ are the same file
cp: ‘.command.err’ and ‘/nfs/users/cn/lsantus/projects/FED/src/00_clusterCRG/work/f1/e6ca0672be725a02d8a091a3b93d38/.command.err’ are the same file
